--- a/tutorials/repeat-until-success/notebook.ipynb
+++ b/tutorials/repeat-until-success/notebook.ipynb
@@ -10,9 +10,9 @@
    "source": [
     "# Repeat until success\n",
     "\n",
-    "## Background \n",
+    "## Background\n",
     "\n",
-    "This tutorial demonstrates the current capabilities of IBM dynamic-circuit backends to use mid-circuit measurements to produce a circuit that repeatedly attempts its setup until a syndrome measurement reveals that it has been successful. \n",
+    "This tutorial demonstrates the current capabilities of IBM dynamic-circuit backends to use mid-circuit measurements to produce a circuit that repeatedly attempts its setup until a syndrome measurement reveals that it has been successful.\n",
     "\n",
     "We will build an abstract circuit that uses the non-parametrized gate set $\\{H,\\,X,\\,S,\\,\\text{Toffoli}\\}$ to construct a heralded $R_X(\\theta)$ gate on a target qubit, where $\\theta$ satisfies $\\cos\\theta = \\frac35$. Each iteration of the circuit only has a finite chance of success, but successes are heralded, so we will use our dynamic-circuit capabilities to repeat the setup until it succeeds."
    ]
@@ -402,13 +402,13 @@
     "    state.\"\"\"\n",
     "    successes = collections.defaultdict(int)\n",
     "    failures = collections.defaultdict(int)\n",
-    "    \n",
+    "\n",
     "    for key, value in counts.items():\n",
     "        if key.endswith(\"00\"):\n",
     "            successes[key[0]] += value\n",
     "        else:\n",
     "            failures[key[0]] += value\n",
-    "            \n",
+    "\n",
     "    return successes, failures"
    ]
   },
@@ -511,7 +511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -525,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3"
   },
   "vscode": {
    "interpreter": {
