--- a/tutorials/build-repitition-codes/notebook.ipynb
+++ b/tutorials/build-repitition-codes/notebook.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "## Background\n",
     "\n",
-    "To enable real-time quantum error correction (QEC), we require the capability to dynamically control quantum program flow during execution so that quantum gates may be conditioned on measurement results. In this tutorial, we will run the bit-flip code, which is a very simple form of QEC. We will demonstrate a dynamic quantum circuit that can protect an encoded qubit from a single bit-flip error, and then evaluate the performance of the bit-flip code. \n",
+    "To enable real-time quantum error correction (QEC), we require the capability to dynamically control quantum program flow during execution so that quantum gates may be conditioned on measurement results. In this tutorial, we will run the bit-flip code, which is a very simple form of QEC. We will demonstrate a dynamic quantum circuit that can protect an encoded qubit from a single bit-flip error, and then evaluate the performance of the bit-flip code.\n",
     "\n",
     "We can exploit additional ancilla qubits and entanglement to measure what are known as *stabilizers* that do not transform our encoded quantum information, while still informing us of some classes of errors that may have occurred. A quantum stabilizer code encodes $k$ logical qubits into $n$ physical qubits. Stabilizer codes critically focus on correcting a discrete error set with support from the Pauli group $\\Pi^n$. Assume the set of possible errors are $ \\epsilon \\subset \\Pi^n$. For example, in a bit-flip code with three qubits encoding the quantum state, we will have $\\epsilon = \\{IIX, IXI, XII\\}$. We can measure the stabilizers and observing their eigenvalues to dete"
    ]
@@ -115,14 +115,14 @@
     "\n",
     "def measure_syndrome_bit(circuit, qreg_data, qreg_measure, creg_measure):\n",
     "    \"\"\"\n",
-    "        Measure the syndrome by measuring the parity. \n",
+    "        Measure the syndrome by measuring the parity.\n",
     "        We reset our ancilla qubits after measuring the stabilizer\n",
-    "        so we can reuse them for repeated stabilizer measurements. \n",
-    "        Because we have already observed the state of the qubit, \n",
-    "        we can write the conditional reset protocol directly to \n",
-    "        avoid another round of qubit measurement if we used \n",
+    "        so we can reuse them for repeated stabilizer measurements.\n",
+    "        Because we have already observed the state of the qubit,\n",
+    "        we can write the conditional reset protocol directly to\n",
+    "        avoid another round of qubit measurement if we used\n",
     "        the `reset` instruction.\n",
-    "    \"\"\" \n",
+    "    \"\"\"\n",
     "    circuit.cx(qreg_data[0], qreg_measure[0])\n",
     "    circuit.cx(qreg_data[1], qreg_measure[0])\n",
     "    circuit.cx(qreg_data[0], qreg_measure[1])\n",
@@ -179,10 +179,10 @@
     "    circuit = initialize_qubits(circuit)\n",
     "    circuit = encode_bit_flip(circuit, state_data, ancillas_data)\n",
     "    circuit = measure_syndrome_bit(circuit, qreg_data, qreg_measure, creg_syndrome)\n",
-    "    \n",
+    "\n",
     "    if apply_correction:\n",
     "        circuit = apply_correction_bit(circuit, qreg_data, creg_syndrome)\n",
-    "    \n",
+    "\n",
     "    circuit = apply_final_readout(circuit,  qreg_data, creg_data)\n",
     "    return circuit\n",
     "\n",
@@ -423,7 +423,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -437,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3"
   },
   "vscode": {
    "interpreter": {
