--- a/tutorials/explore-composer/notebook.ipynb
+++ b/tutorials/explore-composer/notebook.ipynb
@@ -3,6 +3,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "b27d7770-0fd4-4173-9b52-99a0898634db",
    "metadata": {},
    "source": [
     "## What is it?\n",
@@ -27,6 +28,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "477a3b86-e25f-4966-ae9f-0831482d202f",
    "metadata": {},
    "source": [
     "## Tour of the interface\n",
@@ -65,12 +67,13 @@
     "\n",
     "11. **Visualizations** - Visualizations characterize your circuit as you build it. They use a single-shot statevector simulator, which is different from the system specified in the Setup and run settings. Note that the visualizations ignore any measurement operations you add. Sign in and click **Setup and run** to get results from the specified backend instead.\n",
     "\n",
-    "    To learn about the visualizations, see [Visualizations](#visualizations).\n"
+    "    To learn about the visualizations, see [Visualizations](#visualizations)."
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "e9207850-523d-410b-9df4-27cd6b320e3e",
    "metadata": {},
    "source": [
     "## Build, edit, and inspect quantum circuits\n",
@@ -191,6 +194,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "d106f427-c7f6-4c7e-9f5f-b7dfcca515cb",
    "metadata": {},
    "source": [
     "### 3. Build your circuit with OpenQASM code\n",
@@ -230,6 +234,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "8b6551de-ad4e-4b95-bb8a-56b43575764e",
    "metadata": {},
    "source": [
     "#### Create a custom operation in OpenQASM\n",
@@ -284,6 +289,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "d4ed95f2-15ad-4e9a-add3-57e227270a5d",
    "metadata": {},
    "source": [
     "## Run circuits and view results\n",
@@ -321,6 +327,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "b37d5709-a82a-4453-9cba-6d3cd2b475aa",
    "metadata": {},
    "source": [
     "## Visualizations\n",
@@ -441,12 +448,13 @@
     "\n",
     "The statevector at the terminus of the above circuit. The color wheel maps phase angle to color. The output state is expressed as a list of complex numbers.\n",
     "\n",
-    "The circuit puts the two qubits into the state $|\\psi\\rangle = (|00\\rangle + |01\\rangle+ |10\\rangle-|11\\rangle) / 2$. The computational basis states are $|00\\rangle$, $|10\\rangle$, $|01\\rangle$, and $|11\\rangle$. The magnitudes of the amplitudes are $1/2$, and the quantum phases with respect to the ground state are $0$ for $|01\\rangle$ and $|10\\rangle$, and $\\pi$ for $|11\\rangle$.\n"
+    "The circuit puts the two qubits into the state $|\\psi\\rangle = (|00\\rangle + |01\\rangle+ |10\\rangle-|11\\rangle) / 2$. The computational basis states are $|00\\rangle$, $|10\\rangle$, $|01\\rangle$, and $|11\\rangle$. The magnitudes of the amplitudes are $1/2$, and the quantum phases with respect to the ground state are $0$ for $|01\\rangle$ and $|10\\rangle$, and $\\pi$ for $|11\\rangle$."
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "9c47c5d8-7447-4cc3-b5bb-09cd2f1689bc",
    "metadata": {},
    "source": [
     "## Composer operations glossary\n",
@@ -744,10 +752,23 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
