--- a/tutorials/submitting-transpiled-circuits/notebook.ipynb
+++ b/tutorials/submitting-transpiled-circuits/notebook.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "96e7739a-b193-4286-be05-d7416da3cb38",
    "metadata": {},
    "source": [
     "# Submit pre-transpiled circuits\n",
@@ -12,12 +13,13 @@
     "\n",
     "For example, we may know better than the transpiler in some cases, or want to target a specific subset of qubits on a specific device. In this tutorial, we'll disable automatic transpilation to test the performance of different transpiler settings. This example will take you through the full process of creating, transpiling, and submitting circuits.\n",
     "\n",
-    "## Setup\n"
+    "## Setup"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "5bd13972-0a36-4d5d-9d04-6817fbf73203",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "86d62a41-4c55-4cd3-be4e-22d64be62f91",
    "metadata": {},
    "outputs": [
     {
@@ -63,16 +66,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa76326e-48ee-4db1-83d0-0432cf9d4514",
    "metadata": {},
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "In the following code cell, we create a small circuit that our transpiler will try to optimize. In this example, we create a circuit that carries out Grover's algorithm, with an oracle that marks the state `111`. We then simulate the ideal distribution (what we'd expect to measure if we ran this on a perfect quantum computer, an infinite number of times) for comparison later.\n"
+    "In the following code cell, we create a small circuit that our transpiler will try to optimize. In this example, we create a circuit that carries out Grover's algorithm, with an oracle that marks the state `111`. We then simulate the ideal distribution (what we'd expect to measure if we ran this on a perfect quantum computer, an infinite number of times) for comparison later."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "d0f2ea04-1c01-4bd4-97f1-ae82c6163e0d",
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "e9dffe14-838c-4943-acd5-112183137b30",
    "metadata": {},
    "outputs": [
     {
@@ -121,18 +127,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "10904031-f64b-420a-aa02-00878e003895",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum execution.\n",
     "\n",
     "Next, we transpile the circuits for our backend. We're going to compare the performance of the transpiler with `optimization_level` set to `0` (lowest) against `3` (highest). The lowest optimization level just does the bare minimum needed to get the circuit running on the device; it maps the circuit qubits to the device qubits, and adds swaps gates to allow all 2-qubit operations. The highest optimization level is much smarter and uses lots of tricks to reduce the overall gate count. Since multi-qubit gates have high error rates, and qubits decohere over time, the shorter circuits should give better results.\n",
     "\n",
-    "In the following cell, we transpile `qc` for both values of `optimization_level`, print the number of CNOT gates, and add the transpiled circuits to a list. Some of the transpiler's algorithms are randomized, so we set a seed for reproducibility.\n"
+    "In the following cell, we transpile `qc` for both values of `optimization_level`, print the number of CNOT gates, and add the transpiled circuits to a list. Some of the transpiler's algorithms are randomized, so we set a seed for reproducibility."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "70f8abdd-9c8b-481d-8fea-8d50b1771be0",
    "metadata": {},
    "outputs": [
     {
@@ -157,16 +165,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46890930-54c4-4eee-9e07-d0acd74f7807",
    "metadata": {},
    "source": [
     "Since CNOTs usually have a high error rate, the circuit transpiled with `optimization_level=3` should perform much better.\n",
     "\n",
-    "Another way we can improve performance is through [dynamic decoupling](https://docs.quantum-computing.ibm.com/api/qiskit-ibm-provider/qiskit_ibm_provider.transpiler.passes.scheduling.PadDynamicalDecoupling#paddynamicaldecoupling), where we apply a sequence of gates to idling qubits. This cancels out some unwanted interactions with the environment. In the following cell, we add dynamic decoupling to the circuit transpiled with `optimization_level=3`, and add it to our list.\n"
+    "Another way we can improve performance is through [dynamic decoupling](https://docs.quantum-computing.ibm.com/api/qiskit-ibm-provider/qiskit_ibm_provider.transpiler.passes.scheduling.PadDynamicalDecoupling#paddynamicaldecoupling), where we apply a sequence of gates to idling qubits. This cancels out some unwanted interactions with the environment. In the following cell, we add dynamic decoupling to the circuit transpiled with `optimization_level=3`, and add it to our list."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "e9d91b65-4a32-4996-82e8-824dbd22567f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "c5e9a2a5-01aa-48be-89c4-aea6d91bdcc4",
    "metadata": {},
    "outputs": [
     {
@@ -214,18 +225,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "215dff39-5d47-4479-a216-b3d2bfc174e4",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit Primitives.\n",
     "\n",
     "At this point, we have a list of circuits transpiled for our system. In the following cell, we create an instance of the sampler primitive, and start a batched job using the context manager (`with ...:`), which automatically opens and closes the Batch for us. This is where we pass the `skip_transpilation=True` argument.\n",
     "\n",
-    "Within the context manager, we sample the circuits and store the results to `result`.\n"
+    "Within the context manager, we sample the circuits and store the results to `result`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "74437abd-fca9-4d5b-bf15-0055498690ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,16 +254,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "edbf6c8f-786a-4e73-8524-fb608b8b3e87",
    "metadata": {},
    "source": [
     "## Step 4: Post-process, return result in classical format.\n",
     "\n",
-    "Finally, we can plot the results from the device runs against the ideal distribution. You can see the results with `optimization_level=3` are closer to the ideal distribution due to the lower gate count, and `optimization_level=3 + dd` is even closer due to the dynamic decoupling we applied.\n"
+    "Finally, we can plot the results from the device runs against the ideal distribution. You can see the results with `optimization_level=3` are closer to the ideal distribution due to the lower gate count, and `optimization_level=3 + dd` is even closer due to the dynamic decoupling we applied."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "c4f72f53-b5f7-451f-8713-fa2f563aa90f",
    "metadata": {},
    "outputs": [
     {
@@ -281,14 +296,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca9c0298-b80e-4154-b56e-2466f765b9e2",
    "metadata": {},
    "source": [
-    "We can confirm this by computing the [Hellinger fidelity](https://docs.quantum-computing.ibm.com/api/qiskit/quantum_info) between each set of results and the ideal distribution (higher is better, and 1 is perfect fidelity).\n"
+    "We can confirm this by computing the [Hellinger fidelity](https://docs.quantum-computing.ibm.com/api/qiskit/quantum_info) between each set of results and the ideal distribution (higher is better, and 1 is perfect fidelity)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "1754bad6-6756-4f97-949e-7ea8e25debc9",
    "metadata": {},
    "outputs": [
     {
@@ -311,6 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "df6cc2cf-1eb7-40f7-9cf6-4dac11fd7506",
    "metadata": {},
    "outputs": [
     {
@@ -333,6 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "65d54642-6d16-4c36-b03e-7618db856911",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +374,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -369,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3"
   }
  },
  "nbformat": 4,
