--- a/tutorials/variational-quantum-eigensolver/notebook.ipynb
+++ b/tutorials/variational-quantum-eigensolver/notebook.ipynb
@@ -16,8 +16,8 @@
     "   1. Hamiltonian and ansatz (problem specification)\n",
     "   2. Qiskit Runtime estimator\n",
     "   3. Classical optimizer\n",
-    "   \n",
-    "Although the Hamiltonian and ansatz require domain specific knowledge to construct, these details are immaterial to the Runtime, and we can execute a wide class of VQE problems in the same manner. "
+    "\n",
+    "Although the Hamiltonian and ansatz require domain specific knowledge to construct, these details are immaterial to the Runtime, and we can execute a wide class of VQE problems in the same manner."
    ]
   },
   {
@@ -334,7 +334,7 @@
    "source": [
     "### Creating a callback function\n",
     "\n",
-    "Callback functions are a standard way for users to obtain additional information about the status of an iterative algorithm.  The standard SciPy callback routine allows for returning only the interim vector at each iteration.  However, it is possible to do much more than this.  Here, we show how to use a mutable object, such as a dictionary, to store the current vector at each iteration, for example in case we need to restart the routine due to failure, and also return the current iteration number and average time per iteration. "
+    "Callback functions are a standard way for users to obtain additional information about the status of an iterative algorithm.  The standard SciPy callback routine allows for returning only the interim vector at each iteration.  However, it is possible to do much more than this.  Here, we show how to use a mutable object, such as a dictionary, to store the current vector at each iteration, for example in case we need to restart the routine due to failure, and also return the current iteration number and average time per iteration."
    ]
   },
   {
@@ -452,7 +452,6 @@
    "id": "67d09ca9",
    "metadata": {},
    "source": [
-    "\n",
     "Because we are sending a large number of jobs that we would like to execute together, we use a [`Session`](https://docs.quantum-computing.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Session) to execute all the generated circuits in one block.  Here `args` is the standard SciPy way to supply the additional parameters needed by the cost function."
    ]
   },
@@ -671,7 +670,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -685,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3"
   }
  },
  "nbformat": 4,
