Reorganise page to get `job_id` programatically first
This lets us avoid hardcoding the `job_id`, which means anyone can run
the notebook successfully (rather than just Frank).

--- a/docs/run/save-jobs.ipynb
+++ b/docs/run/save-jobs.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programmatically through its `job_id` method, or you can see all your submitted jobs and their IDs through the [Jobs dashboard](https://quantum.ibm.com/jobs).\n",
     "\n",
-    "Once you have the job ID, use the `QiskitRuntimeService.jobs` method to retrieve it."
+    "To find a job programatically, use the [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs) method. The following cell finds any jobs submitted in the last day. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
    ]
   },
   {
@@ -31,7 +31,10 @@
     {
      "data": {
       "text/plain": [
-       "PrimitiveResult([PubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=10, num_bits=2>)), metadata={'circuit_metadata': {}})], metadata={'version': 2})"
+       "[<RuntimeJob('cogiau7imm49f6et38a0', 'sampler')>,\n",
+       " <RuntimeJob('crgja91qzd5000886v60', 'sampler')>,\n",
+       " <RuntimeJob('cogi9gftcirtooeunfe0', 'sampler')>,\n",
+       " <RuntimeJob('cogi8qqai5rk2r0u9bu0', 'sampler')>]"
       ]
      },
      "execution_count": 1,
@@ -40,11 +43,13 @@
     }
    ],
    "source": [
+    "import datetime\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
+    "one_day_ago = datetime.datetime.now() - datetime.timedelta(days=1)\n",
+    "\n",
     "service = QiskitRuntimeService()\n",
-    "retrieved_job = service.job(\"cogiau7imm49f6et38a0\")\n",
-    "retrieved_job.result()"
+    "service.jobs(created_after=one_day_ago)"
    ]
   },
   {
@@ -52,11 +57,20 @@
    "id": "9aae5f5a-a543-493c-9bc5-5682ba846ab5",
    "metadata": {},
    "source": [
-    "### Programmatically find jobs\n",
+    "You can also select by backend, job state, session, and more. For more information, see [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs) in the API documentation.\n",
     "\n",
-    "If you don't have a job ID and want to find it programmatically rather than visiting the [Jobs dashboard](https://quantum.ibm.com/jobs), you can use the [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs) method.\n",
-    "\n",
-    "The following cell finds any jobs submitted in the last hour. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
+    "Once you have the job ID, use the [`QiskitRuntimeService.job`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#job) method to retrieve it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get ID of last job for demonstration\n",
+    "job_id = service.jobs()[0].job_id()\n",
+    "print(job_id)"
    ]
   },
   {
@@ -80,19 +94,8 @@
     }
    ],
    "source": [
-    "import datetime\n",
-    "one_hour_ago = datetime.datetime.now() - datetime.timedelta(hours=1)\n",
-    "\n",
-    "service = QiskitRuntimeService()\n",
-    "service.jobs(created_after=one_hour_ago)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "60405a95-8d79-4ece-9f36-47299cfa3311",
-   "metadata": {},
-   "source": [
-    "You can also select by backend, job state, session, and more. For more information, see [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs) in the API documentation."
+    "retrieved_job = service.job(job_id)\n",
+    "retrieved_job.result()"
    ]
   },
   {
