Change code to get results from last 90 days

--- a/docs/run/save-jobs.ipynb
+++ b/docs/run/save-jobs.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programmatically through its `job_id` method, or you can see all your submitted jobs and their IDs through the [Jobs dashboard](https://quantum.ibm.com/jobs).\n",
     "\n",
-    "To find a job programatically, use the [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs) method. The following cell finds any jobs submitted in the last day. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
+    "To find a job programatically, use the [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs) method. By default, this returns the most recent jobs, but you can also filter jobs by backend name, creation date, and more. The following cell finds any jobs submitted in the last year. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
    ]
   },
   {
@@ -46,10 +46,11 @@
     "import datetime\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "one_day_ago = datetime.datetime.now() - datetime.timedelta(days=1)\n",
+    "three_months_ago = datetime.datetime.now() - datetime.timedelta(days=90)\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "service.jobs(created_after=one_day_ago)"
+    "jobs_in_last_three_months = service.jobs(created_after=three_months_ago)\n",
+    "jobs_in_last_three_months[:3]  # show first three jobs"
    ]
   },
   {
@@ -77,7 +78,7 @@
     }
    ],
    "source": [
-    "# Get ID of last job for demonstration.\n",
+    "# Get ID of most recent job for demonstration.\n",
     "# This will not work if you've never submitted a job.\n",
     "job_id = service.jobs()[0].job_id()\n",
     "print(job_id)"
