re-run notebook

--- a/docs/run/save-jobs.ipynb
+++ b/docs/run/save-jobs.ipynb
@@ -33,8 +33,7 @@
       "text/plain": [
        "[<RuntimeJob('cogiau7imm49f6et38a0', 'sampler')>,\n",
        " <RuntimeJob('crgja91qzd5000886v60', 'sampler')>,\n",
-       " <RuntimeJob('cogi9gftcirtooeunfe0', 'sampler')>,\n",
-       " <RuntimeJob('cogi8qqai5rk2r0u9bu0', 'sampler')>]"
+       " <RuntimeJob('cogi9gftcirtooeunfe0', 'sampler')>]"
       ]
      },
      "execution_count": 1,
